// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDates 1`] = `
Array [
  "1970-01-12",
  "1970-01-13",
  "1970-01-14",
  "1970-01-15",
]
`;

exports[`log debug 1`] = `
Array [
  Array [
    "15 06:56:07.890 [ERROR]: error",
  ],
  Array [
    "15 06:56:07.890 [INFO]: info",
  ],
  Array [
    "15 06:56:07.890 [DEBUG]: debug",
  ],
]
`;

exports[`log error 1`] = `
Array [
  Array [
    "15 06:56:07.890 [ERROR]: error",
  ],
]
`;

exports[`log info 1`] = `
Array [
  Array [
    "15 06:56:07.890 [ERROR]: error",
  ],
  Array [
    "15 06:56:07.890 [INFO]: info",
  ],
]
`;

exports[`parseOptions 1`] = `
Object {
  "debug": true,
  "env": "live",
  "server": true,
  "token": "token",
  "tokens": Array [
    "token1",
    "token2",
  ],
}
`;

exports[`parseOptions defaults 1`] = `
Object {
  "debug": true,
  "env": "live",
  "server": true,
  "token": "token",
  "tokens": Array [
    "token1",
    "token2",
  ],
}
`;

exports[`round 1`] = `12345`;

exports[`round 2`] = `12345`;

exports[`round 3`] = `12345.1234567`;

exports[`round 4`] = `12345.12345679`;

exports[`round 5`] = `0.12345679`;

exports[`round 6`] = `12345.12345679`;

exports[`sleep 1`] = `
Array [
  Array [
    [Function],
    1,
  ],
]
`;
